processed/jira/txt/LU/LU-19441.txt
Key:        LU-19441
Summary:    el9.2 build error: offset 0 is out of the bounds [0, 0]
Link:       https://jira.whamcloud.com/browse/LU-19441
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Duplicate
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Tue, 30 Sep 2025 01:33:39 +0000
Updated:    Tue, 30 Sep 2025 10:19:54 +0000
Resolved:   Tue, 30 Sep 2025 10:19:54 +0000
Links:      Duplicate: duplicates LU-18994

--- Description ---
CC [M]  .../lustre/lov/lov_dev.o
In file included from ./include/linux/string.h:253,
                 from ./include/linux/bitmap.h:11,
                 from ./include/linux/cpumask.h:12,
                 from ./include/linux/smp.h:13,
                 from ./include/linux/lockdep.h:14,
                 from ./include/linux/mutex.h:17,
                 from ./include/linux/kernfs.h:12,
                 from ./include/linux/sysfs.h:16,
                 from ./include/linux/kobject.h:20,
                 from .../lustre/include/obd_class.h:19,
                 from .../lustre/lov/lov_dev.c:21:
In function ‘strncpy’,
    inlined from ‘obd_uuid2str’ at .../lustre/include/uapi/linux/lustre/lustre_user.h:1422:3,
    inlined from ‘lov_add_mdc_target’ at .../lustre/lov/lov_dev.c:489:4:
./include/linux/fortify-string.h:53:33: error: ‘__builtin_strncpy’ offset 0 is out of the bounds [0, 0] [-Werror=array-bounds]
   53 | #define __underlying_strncpy    __builtin_strncpy
      |                                 ^
./include/linux/fortify-string.h:122:16: note: in expansion of macro ‘__underlying_strncpy’
  122 |         return __underlying_strncpy(p, q, size);
      |                ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[6]: *** [scripts/Makefile.build:321: .../lustre/lov/lov_dev.o] Error 1
make[5]: *** [scripts/Makefile.build:607: .../lustre/lov] Error 2
make[4]: *** [scripts/Makefile.build:607: .../lustre] Error 2

--- Comment (stancheff, Tue, 30 Sep 2025 10:19:54 +0000) ---
Will be resolved by: https://review.whamcloud.com/c/fs/lustre-release/+/61585

Duplicate of: https://jira.whamcloud.com/browse/LU-18994

--- Comment (pjones, Tue, 30 Sep 2025 02:24:19 +0000) ---
Ah I see - so it is something that could be carried locally if need be.

--- Comment (stancheff, Tue, 30 Sep 2025 01:56:12 +0000) ---
Not all of our test infra has moved to 9.4 yet (we still have some 9.2).

Not a high priority, just something I hit testing interop.

--- Comment (pjones, Tue, 30 Sep 2025 01:44:33 +0000) ---
Shaun

Why do we need to continue worrying about 9.2? Surely it makes sense to focus on more current RHEL 9.x versions?

Peter

--- Comment (gerrit, Tue, 30 Sep 2025 01:34:58 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/61627

Subject: LU-19441 build: prefer snprintf over strncpy

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 1148714e8711cdd2047720c7f5d42231a0d84899
